added new tab submission

--- a/notebooks/03_mitigate.ipynb
+++ b/notebooks/03_mitigate.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7e4f1ee5",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
     "# Encode categorical vars\n",
     "df_enc = pd.get_dummies(df, drop_first=True)\n",
     "\n",
-    "X = df_enc.drop(columns=[\"Loan_Approved\"], errors=\"ignore\")\n",
+    "X = df_enc.drop(columns=[\"loan_approved\"], errors=\"ignore\")\n",
     "y = df[\"loan_approved\"].map({\"Denied\": 0, \"Approved\": 1})\n",
     "\n",
     "print(f\"✅ Dataset loaded: {X.shape[0]} rows, {X.shape[1]} features\")\n"
